--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -30,7 +30,7 @@
                 </div>
             </div>
             <!-- burger button -->
-            <div class="collapse" id="collapsable-nav">
+            <div class="collapse visible-xs" id="collapsable-nav">
                 <ul class="nav navbar-nav">
                   <li>
                       <a class="nav-menu-item" href="#chicken">Chicken</a>
