Fixed bug and css path

--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -9,7 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- JS library -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> 
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Document</title>
 </head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -30,8 +30,8 @@
                 </div>
             </div>
             <!-- burger button -->
-            <div class="collapse visible-xs" id="collapsable-nav">
-                <ul class="nav navbar-nav">
+            <div class="collapse" id="collapsable-nav">
+                <ul class="nav navbar-nav visible-xs">
                   <li>
                       <a class="nav-menu-item" href="#chicken">Chicken</a>
                   </li>
