--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>Module 4 Solution Starter</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">  <title>Module 4 Solution Starter</title>
   <script>
     var names = []; // DO NOT REMOVE
   </script>
