--- a/assignment1_Angular/assignment1-starter-code/index.html
+++ b/assignment1_Angular/assignment1-starter-code/index.html
@@ -11,6 +11,8 @@
 
 <body >
     <div class="container" ng-controller="LunchCheckController">
+        <h1>Lunch Checker</h1>
+
         <div class="form-group">
             <input id="lunch-menu" type="text" ng-model="items" placeholder="list comma separated dishes you usually have for lunch" class="form-control">
         </div>
