--- a/assignment2_Angular/assignment2-starter-code/index.html
+++ b/assignment2_Angular/assignment2-starter-code/index.html
@@ -45,7 +45,8 @@
     <div class="col-md-6" ng-controller="AlreadyBoughtController as boughtItems">
       <h2>Already Bought:</h2>
       <ul>
-          <li ng-repeat="item in boughtItems.items">Bought {{item.quantity}} {{item.name}} for a total price of ${{item.pricePerItem * item.quantity}}</li>
+          <li ng-repeat="item in boughtItems.items">Bought {{item.quantity}} {{item.name}} for a total price of
+             {{item.totalPrice | customfilter : '$' : '$$$$$$'}}</li>
       </ul>
       <div ng-if="boughtItems.items.length == 0" class="emptyMessage">Nothing bought yet.</div>
   </div>
