--- a/assignment3_Angular/assignment3-starter-code/index.html
+++ b/assignment3_Angular/assignment3-starter-code/index.html
@@ -1,25 +1,24 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" ng-app="NarrowItDownApp">
   <head>
     <title>Narrow Down Your Menu Choice</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles/bootstrap.min.css">
     <link rel="stylesheet" href="styles/styles.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.0/angular.min.js"></script>
+    <script src="js/app.js"></script> 
   </head>
 <body>
-   <div class="container">
+  <div class="container" ng-controller="NarrowItDownController as menuitems">
     <h1>Narrow Down Your Chinese Menu Choice</h1>
-
-    <div class="form-group">
-      <input type="text" placeholder="search term" class="form-control">
+    <div class="search">
+        <input type="text" placeholder="search term" class="form-control" ng-model="menuitems.searchTerm">
+        <div class="narrow-button">
+            <button class="btn btn-primary" ng-click="menuitems.matchedMenuItems(menuitems.searchTerm)">Narrow It Down For Me!</button>
+        </div>
     </div>
-    <div class="form-group narrow-button">
-      <button class="btn btn-primary">Narrow It Down For Me!</button>
-    </div>
-
-    <!-- found-items should be implemented as a component -->
-    <found-items found-items="...." on-remove="...."></found-items>
-  </div>
-
+    <found-items items="menuitems.found" on-remove="menuitems.removeItem(index)" on-empty="menuitems.message">
+    </found-items>
+</div>
 </body>
 </html>
